--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/global/index.css">
-    <link rel="stylesheet" href="./css/pages/index.css">
+    <link rel="stylesheet" href="css/pages/index.css">
+
     <title>Document</title>
 </head>
 <body>
